big cutdown, auth
